<resources>
    <string name="app_name">静态页面示例</string>
    <string name="page_title">你好，Android！</string>
    <string name="page_description">这是我的第一个纯静态页面</string>
    <string name="confirm_button">确定</string>
    <string name="button_clicked">你点击了确定按钮</string>
    <string name="click_count">已点击 %1$d 次</string>
    <string name="name_hint">请输入名字</string>
    <string name="greet_button">打招呼</string>
    <string name="name_required">名字不能为空</string>
    <string name="greeting">你好，%1$s！</string>
</resources>